a fix lucky shot

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <body style="background:#a9a9a9">
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="./build/dev-server.js"></script>
   </body>
 </html>
