--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
      <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
      <link rel="stylesheet" href="./style.css">
       <script src="https://unpkg.com/vue/dist/vue.js"></script>
